styled (except for checkboxes) TODO: hall of fame table th td width and align issues TODO: pass and store password's hashcode

--- a/MasterMindOnline/web/css/styles.css
+++ b/MasterMindOnline/web/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    height: 100vh;
+}
+
 body {
     background-color: burlywood;
     color: #331a00;
@@ -21,13 +25,14 @@ footer {
 .main {
     width: 50%;
     min-width: 400px;
+    height: calc(100vh - 140px);
+    min-height: 400px;
     margin: auto;
     padding: 20px;
     box-shadow: 0 0 4px saddlebrown;
     opacity: 100%;
     background-color: wheat;
 }
-
 
 error {
     color: red;
@@ -39,11 +44,27 @@ error {
     border: 2px ridge saddlebrown;
     border-radius: 5px;
     display: inline-table;
-    
 }
 
-.guessesTable td, tr {
+.guessesTable thead {
+    display: block;
+}
+
+.guessesTable tbody {
+    height: calc(100vh - 360px);
+    min-height: 46px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: block;
+}
+
+.guessesTable td {
     width: 48px;
+}
+
+.resultTable tbody {
+    display: block;
+    height: 46px;
 }
 
 #guesser {
@@ -52,7 +73,7 @@ error {
     margin-top: 3px;
 }
 
-#guesser td {
+#guesser th {
     border-top: 2px ridge saddlebrown; 
     border-bottom: 2px ridge saddlebrown;
 }
@@ -84,6 +105,39 @@ error {
 .formTable td {
     text-align: left;
     padding: 5px 10px 5px 10px;
+}
+
+.hallOfFameTable {
+    padding: 10px;
+    width: 80%;
+    background-color: burlywood;
+    border: 2px ridge saddlebrown;
+    border-radius: 5px;
+    display: inline-table;
+}
+
+.hallOfFameTable thead {
+    display: block;
+    width: 100%;
+}
+
+.hallOfFameTable tbody {
+    height: auto;
+    min-height: 36px;
+    max-height: calc(100vh - 480px);
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: block;
+}
+
+.hallOfFameTable tr {
+    width: 100%;
+}
+
+.hallOfFameTable td, th{
+    width: 25%;
+    text-align: center;
 }
 
 .slider {
@@ -206,4 +260,19 @@ button:focus {
   background: saddlebrown;
   color: wheat;
   box-shadow: 0 0 4px wheat;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px saddlebrown; 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px #331a00;
+    background-color: saddlebrown;
 }
